# diplodocus2

./: README.md  pathQuery  pathQuery2  pathQuerySecondT  predQuery  triangleQuery
.kdev4/: diplodocus2.kdev4
bak/: CMakeLists.txt  cmake_install.cmake  diplodocus2.kdev4
bak/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
bak/release/: CMakeCache.txt  Makefile  cmake_install.cmake  diplodocus2
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: API.cpp  API.h  BTCprov.cpp  BTCprov.h  Client.cpp  Client.h  Conductor.cpp  Conductor.h  ConductorNode.cpp  ConductorNode.h  DBP.cpp  DBP.h  DBPnetwork.cpp  DBPnetwork.h  Functions.cpp  KeyManager.cpp  KeyManager.h  KeyManager2.cpp  LUBM.cpp  LUBM.h  LUBMnetwork.cpp  LUBMnetwork.h  Molecules.cpp  Molecules.h  PageManager.cpp  PageManager.h  Partitioner.cpp  Partitioner.h  Server.cpp  Server.h  TemplateManager.cpp  TemplateManager.h  TypesHierarchy.cpp  TypesHierarchy.h  TypesManager.cpp  TypesManager.h  WDCqueries.cpp  WDCqueries.h  diplodocus.cpp  diplodocus.h
